k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: puzzle-platform
  labels:
    app: collaborative-puzzle
    environment: base
